--- a/views/bloger.dust
+++ b/views/bloger.dust
@@ -41,16 +41,14 @@
       </form>
     </div>
   </nav>
-
-  <input type="file" class="filepond" name="filepond" multiple data-max-file-size="3MB" data-max-files="1" />
-
+  <form id="saveForm" action="/bloger" method="POST" enctype = "multipart/form-data">
+    <input type="file" class="filepond" name="filename" multiple data-max-file-size="3MB" data-max-files="1" />
   <div style="margin: 0 4%; margin-bottom:50px;">
     <div class="row">
       <div class="col-lg-3 col-md-12 col-pad">
         <div class="headSubject">
           <i class="far fa-object-group"></i>
-          <form id="saveForm" action="/bloger" method="POST">
-          <input name="category" type="text" class="headSubjectInput cat-inp form-control" placeholder="دسته بندی">
+            <input name="category" type="text" class="headSubjectInput cat-inp form-control" placeholder="دسته بندی">
         </div>
         <div class="headSubject">
           <i class="fas fa-layer-group"></i>
@@ -73,7 +71,7 @@
           <input name="title" type="text" class="headSubjectInput form-control" placeholder="عنوان مقاله">
         </div>
         <div id="toolbar"></div>
-          <textarea name="editor1" id="editor1" rows="10" cols="80">
+        <textarea name="editor1" id="editor1" rows="10" cols="80">
                         This is my textarea to be replaced with CKEditor.
           </textarea>
         </form>
