--- a/views/postPage.dust
+++ b/views/postPage.dust
@@ -170,7 +170,10 @@
     <div class="content-wrapper oh">
 
       <!-- Page Title -->
-      <section class="page-title text-center" style="background-image: url(img/google_adwords_title_bg.jpg);">
+       <section id="background" class="page-title text-center" style="background-Image:url({Image})"> 
+         <!-- <script>
+           document.getElementById("background").style.backgroundImage="url({Image})"
+         </script> -->
         <div class="container relative clearfix">
           <div class="title-holder">
             <div class="title-text">
@@ -204,8 +207,8 @@
 
                     <div class="entry-content">
                       <div class="article pb-40">
-
-                          {post}
+                      
+                        {post|s}
 
 
                       </div> <!-- end article -->
